Tidy some things
make it compile & run on FreeBSD which doesn't have
libc::__errno_location()
Fix typos in some API call names
check for completeness of API & tests in apt-test-coverage

--- a/libknet/bindings/rust/Cargo.toml
+++ b/libknet/bindings/rust/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "rust-kronosnet"
+name = "libknet"
 version = "0.1.0"
 authors = ["Christine Caulfield <ccaulfie@redhat.com>"]
 edition = "2018"
-readme = "README.md"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/chrissie-c/rust-kronosnet"
+readme = "README"
+license = "LGPL-2.1"
+repository = "https://github.com/kronosnet/kronosnet"
 description = "Rust bindings for Kronosnet libraries"
 categories = ["api-bindings"]
 keywords = ["cluster", "high-availability"]
