--- a/libnozzle/bindings/rust/Cargo.toml
+++ b/libnozzle/bindings/rust/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "rust-kronosnet"
+name = "libnozzle"
 version = "0.1.0"
 authors = ["Christine Caulfield <ccaulfie@redhat.com>"]
 edition = "2018"
-readme = "README.md"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/chrissie-c/rust-kronosnet"
-description = "Rust bindings for Kronosnet libraries"
+readme = "README"
+license = "LGPL-2.1"
+repository = "https://github.com/kronosnet/kronosnet"
+description = "Rust bindings for libnozzle library"
 categories = ["api-bindings"]
 keywords = ["cluster", "high-availability"]
 
