--- a/libknet/bindings/rust/Cargo.toml
+++ b/libknet/bindings/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "libknet"
+name = "kronosnet"
 version = "0.1.0"
 authors = ["Christine Caulfield <ccaulfie@redhat.com>"]
 edition = "2018"
