--- a/libknet/bindings/rust/tests/Cargo.toml
+++ b/libknet/bindings/rust/tests/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libknet = { path = ".." }
+kronosnet = { path = ".." }
 
 [[bin]]
 name = "knet-test"
