Add some more tests, fix some bugs
'make dist' fails though - not sure why

Things to do:
- fix make dist
- Find a way to make tests use the in-tree libraries
  (currently they just use them for building)
- probably fix all the Makefile.am files

--- a/libnozzle/bindings/rust/Makefile.am
+++ b/libnozzle/bindings/rust/Makefile.am
@@ -8,9 +8,11 @@ EXTRA_DIST = Cargo.toml \
 	src/sys/libnozzle.rs \
 	src/sys/mod.rs
 
+if BUILD_LIBNOZZLE
 all-local:
 	cargo build $(RUSTFLAGS)
 
 clean-local:
 	-cargo clean
 
+endif
