[build] minor cleanup
- make rust bindings optionals
- cleanup variables
- reformat Makefile.am
- add some copyrights
- allow test suite to run

Signed-off-by: Fabio M. Di Nitto <fdinitto@redhat.com>

--- a/libknet/bindings/rust/Makefile.am
+++ b/libknet/bindings/rust/Makefile.am
@@ -1,16 +1,28 @@
+#
+# Copyright (C) 2021 Red Hat, Inc.  All rights reserved.
+#
+# Author: Christine Caulfield <ccaulfie@redhat.com>
+#
+# This software licensed under GPL-2.0+
+#
 
+MAINTAINERCLEANFILES	= Makefile.in
 
-EXTRA_DIST = Cargo.toml \
-	regenerate-sys.sh \
-	build.rs \
-	src/libknet.rs \
-	src/lib.rs \
-	src/sys/libknet.rs \
-	src/sys/mod.rs
+include $(top_srcdir)/build-aux/check.mk
+
+SUBDIRS			= . tests
+
+EXTRA_DIST		= Cargo.toml \
+			  regenerate-sys.sh \
+			  build.rs \
+			  src/libknet.rs \
+			  src/lib.rs \
+			  src/sys/libknet.rs \
+			  src/sys/mod.rs
 
 all-local:
-	cargo build $(RUSTFLAGS)
+	$(CARGO) build $(RUST_FLAGS)
 
 clean-local:
-	-cargo clean
-
+	-$(CARGO) clean
+	rm -rf Cargo.lock
