--- a/libnozzle/bindings/rust/Makefile.am
+++ b/libnozzle/bindings/rust/Makefile.am
@@ -1,18 +1,28 @@
+#
+# Copyright (C) 2021 Red Hat, Inc.  All rights reserved.
+#
+# Author: Christine Caulfield <ccaulfie@redhat.com>
+#
+# This software licensed under GPL-2.0+
+#
 
+MAINTAINERCLEANFILES	= Makefile.in
 
-EXTRA_DIST = Cargo.toml \
-	build.rs \
-	regenerate-sys.sh \
-	src/libnozzle.rs \
-	src/lib.rs \
-	src/sys/libnozzle.rs \
-	src/sys/mod.rs
+include $(top_srcdir)/build-aux/check.mk
 
-if BUILD_LIBNOZZLE
+SUBDIRS			= . tests
+
+EXTRA_DIST		= Cargo.toml \
+			  build.rs \
+			  regenerate-sys.sh \
+			  src/libnozzle.rs \
+			  src/lib.rs \
+			  src/sys/libnozzle.rs \
+			  src/sys/mod.rs
+
 all-local:
-	cargo build $(RUSTFLAGS)
+	$(CARGO) build $(RUST_FLAGS)
 
 clean-local:
-	-cargo clean
-
-endif
+	-$(CARGO) clean
+	rm -rf Cargo.lock
