--- a/libnozzle/bindings/rust/tests/Makefile.am
+++ b/libnozzle/bindings/rust/tests/Makefile.am
@@ -1,23 +1,35 @@
+#
+# Copyright (C) 2021 Red Hat, Inc.  All rights reserved.
+#
+# Author: Christine Caulfield <ccaulfie@redhat.com>
+#
+# This software licensed under GPL-2.0+
+#
 
-EXTRA_DIST = Cargo.toml \
-	src/bin/nozzle-test.rs \
-	up.d/tap33
+MAINTAINERCLEANFILES	= Makefile.in
 
-if BUILD_LIBNOZZLE
-check_PROGRAMS = target/$(RUST_TARGET_DIR)/nozzle-test
+include $(top_srcdir)/build-aux/check.mk
 
-noinst_PROGRAMS = $(check_PROGRAMS)
+EXTRA_DIST		= Cargo.toml \
+			  src/bin/nozzle-test.rs \
+			  up.d/tap33
 
-testsuitedir = $(TESTDIR)
-testsuite_PROGRAMS = $(check_PROGRAMS)
+check_PROGRAMS		= target/$(RUST_TARGET_DIR)/nozzle-test
 
-TESTS = $(check_PROGRAMS)
+noinst_PROGRAMS		= $(check_PROGRAMS)
 
-noinst_SCRIPTS = up.d/tap33
+noinst_SCRIPTS		= up.d/tap33
 
-target/$(RUST_TARGET_DIR)/nozzle-test: src/bin/nozzle-test.rs
-	cargo build $(RUSTFLAGS)
+testsuitedir		= $(TESTDIR)
+testsuite_PROGRAMS	= $(check_PROGRAMS)
+
+AM_TESTS_ENVIRONMENT=LD_LIBRARY_PATH="$(abs_top_builddir)/libnozzle/.libs"
+
+TESTS			= $(check_PROGRAMS)
+
+target/$(RUST_TARGET_DIR)/nozzle-test$(EXEEXT): src/bin/nozzle-test.rs
+	$(CARGO) build $(RUST_FLAGS)
 
 clean-local:
-	cargo clean
-endif
+	-$(CARGO) clean
+	rm -rf Cargo.lock
